--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>Hello Microverse</title>
+	<link rel="stylesheet" type="text/css" href=style.css"">
 </head>
 <body>
 	<h1>Hello Microverse</h1>
